--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
+		<start-class>com.example.demo.DemoApplication</start-class>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -22,6 +23,12 @@
 			<artifactId>spring-boot-starter-web</artifactId>
             <version>2.7.4</version>
         </dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
