--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ logging.level.org.springframework.web: DEBUG
 server.error.whitelabel.enabled=false
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+logging.level.org.springframework.web=INFO
+
