--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,12 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>demo</name>
 	<description>Demo project for Spring Boot</description>
+	<packaging>jar</packaging>
 	<properties>
-		<java.version>17</java.version>
+	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>19</java.version>
+		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 		<start-class>com.example.demo.DemoApplication</start-class>
 	</properties>
 	<dependencies>
@@ -22,6 +26,20 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
                 </dependency>
+
+		
+
+		<dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>3.3.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>1.9.1</version>
+        </dependency>
+		
 		
 	       <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
@@ -35,8 +53,7 @@
             <artifactId>jstl</artifactId>
              <version>1.2</version>
               </dependency>
-		
-	
+			
 
 <dependency>
     <groupId>org.springframework.boot</groupId>
